# 8081_The_Bot

./: .gitignore  8081.project  CMakeLists.txt  README.MD
Assets/Graphics/: ground.psd  wall.psd  wall_joint.psd
Generic/Game/: test.xml
Generic/Levels/test/: test.level
Generic/Resources/Prefab/: wall_1024_high.prefab  wall_1024_long.prefab  wall_256_high.prefab  wall_256_long.prefab  wall_512_high.prefab  wall_512_long.prefab  wall_joint_0.prefab  wall_joint_1.prefab  wall_joint_10.prefab  wall_joint_11.prefab  wall_joint_12.prefab  wall_joint_13.prefab  wall_joint_14.prefab  wall_joint_15.prefab  wall_joint_2.prefab  wall_joint_3.prefab  wall_joint_4.prefab  wall_joint_5.prefab  wall_joint_6.prefab  wall_joint_7.prefab  wall_joint_8.prefab  wall_joint_9.prefab
Generic/Resources/Shaders/: AmbientOcclusion.fx  AmbientOcclusionPS3.fx  Blur.fx  Bump_highlight.fx  Collision.fx  DiffuseColorSolid.fx  DiffuseColorWire_NoZTest.fx  Distort.fx  FXAA.fx  Fonts.fx  Fonts.glfx  LightPrePass.fx  LightPrePass.glfx  NormalDepthPass.fx  PS3_Simple.fx  RadialBlur.fx  Shield.fx  SingleTexture.fx  SingleTexture.glfx  Xbox360_specific.fx  billboard.fx  debug_tangentspace_MAX.fx  entity_diffuse.fx  entity_diffuse_MAX.fx  entity_diffuse_nd.fx  entity_diffuse_shadow.fx  entity_diffuse_texture_MAX.fx  entity_extended.fx  entity_extended_MAX.fx  entity_extended_macrops.fxh  entity_extended_nd.fx  entity_extended_shadow.fx  entity_lava.fx  entity_lava_MAX.fx  entity_lava_nd.fx  entity_lava_shadow.fx  entity_mask.fx  entity_mask_MAX.fx  entity_mask_nd.fx  entity_mask_shadow.fx  (+40 more)
Generic/Resources/Shaders/lib/: lighting.fxh  lighting.glfxh  platform.fxh  platform.glfxh  skinning.fxh  skinning.glfxh
Generic/Resources/Sprites/: bobi.character_top_1.tga  bobi.character_top_2.tga  bobi.character_top_4.tga  bobi.character_top_5.tga  bobi.character_top_6.tga  bobi.wall_1024.tga  bobi.wall_256.tga  bobi.wall_512.tga  bobi.wall_joint_0.tga  bobi.wall_joint_1.tga  bobi.wall_joint_10.tga  bobi.wall_joint_11.tga  bobi.wall_joint_12.tga  bobi.wall_joint_13.tga  bobi.wall_joint_14.tga  bobi.wall_joint_15.tga  bobi.wall_joint_2.tga  bobi.wall_joint_3.tga  bobi.wall_joint_4.tga  bobi.wall_joint_5.tga  bobi.wall_joint_6.tga  bobi.wall_joint_7.tga  bobi.wall_joint_8.tga  bobi.wall_joint_9.tga
Generic/Resources/Textures/: _envmap_interior_brown.tga  _envmap_interior_gold.tga  _heathaze_distortion.tga  _loading_color.tga  _shockwave_nrm.tga  _ssao_kernel.tga
Generic/Settings/: sounds.xml
Management/: Gameplay.txt  Scenario.txt
Sources/: CMakeLists.txt
Sources/Common/: Animation.cpp  Animation.hpp  CMakeLists.txt  Input.cpp  Input.hpp  Tools.cpp  Tools.hpp
Sources/Extension/: CMakeLists.txt  Ext8081.configext  Extension.cpp  Extension.hpp  dllmain.cpp
Sources/Game/: CMakeLists.txt  Game.cpp  Game.hpp  main.cpp
Sources/Plugins/: CMakeLists.txt
Sources/Plugins/Level/: CMakeLists.txt  Character.cpp  Character.hpp  Ground.cpp  Ground.hpp  Level.cpp  Level.hpp  LevelLoader.cpp  LevelLoader.hpp
cmake/Modules/: FindDirectX9.cmake  FindPkgMacros.cmake  FindShSDK.cmake  FindXAudio.cmake  FindXInput.cmake
