set(SHINE_EDITOR_EXT_DIR "../Extensions" CACHE PATH "Extension directory")

include_directories(${SHSDK_INCLUDE_DIRS})

set(SOURCES_EXTENSION Extension.cpp Extension.hpp)
source_group("Extension" FILES ${SOURCES_EXTENSION})

if(WIN32)
	set(SOURCES_DLLMAIN dllmain.cpp)
else(WIN32)
	set(SOURCES_DLLMAIN)
endif(WIN32)
source_group("dll" FILES ${SOURCES_DLLMAIN})

set(EXTENSION_SOURCES ${SOURCES_DLLMAIN} ${SOURCES_EXTENSION}) # compile extension sources
set(PLUGIN_OBJECTS $<TARGET_OBJECTS:PluginLevel_Editor>) # embed plugin objects

add_library(Ext8081 SHARED ${EXTENSION_SOURCES} ${PLUGIN_OBJECTS})
set_property(TARGET Ext8081 PROPERTY FOLDER "Editor")
set_property(TARGET Ext8081 APPEND PROPERTY COMPILE_DEFINITIONS "SH_DEV=1")
set_property(TARGET Ext8081 APPEND PROPERTY COMPILE_DEFINITIONS "SH_MASTER=1")
set_property(TARGET Ext8081 APPEND PROPERTY COMPILE_DEFINITIONS "SH_EDITOR=1")
set_property(TARGET Ext8081 APPEND PROPERTY COMPILE_DEFINITIONS "_INTERNAL_DLL")

if (WIN32)
	set_property(TARGET Ext8081 PROPERTY RUNTIME_OUTPUT_DIRECTORY "${SHINE_EDITOR_EXT_DIR}")
	set_property(TARGET Ext8081 PROPERTY RUNTIME_OUTPUT_DIRECTORY_DEBUG "${SHINE_EDITOR_EXT_DIR}")
	set_property(TARGET Ext8081 PROPERTY RUNTIME_OUTPUT_DIRECTORY_RELEASE "${SHINE_EDITOR_EXT_DIR}")
else (WIN32)
	set_property(TARGET Ext8081 PROPERTY LIBRARY_OUTPUT_DIRECTORY "${SHINE_EDITOR_EXT_DIR}")
	set_property(TARGET Ext8081 PROPERTY LIBRARY_OUTPUT_DIRECTORY_DEBUG "${SHINE_EDITOR_EXT_DIR}")
	set_property(TARGET Ext8081 PROPERTY LIBRARY_OUTPUT_DIRECTORY_RELEASE "${SHINE_EDITOR_EXT_DIR}")
endif (WIN32)

set_property(TARGET Ext8081 PROPERTY PREFIX "")

target_link_libraries(Ext8081 ${SHSDK_EDITOR_LIBRARIES})

file(COPY "Ext8081.configext" DESTINATION "${SHINE_EDITOR_EXT_DIR}")
